Modify Route Name and added information in Swagger file.
